Study of 2.20